# lisp-interpreter

./: .gitignore  Makefile  readme.md
lispp/: .gitignore  .tester.json  CMakeLists.txt  readme.md  review.md
lispp/lispp/: any.h  lispp.cpp  lispp.h  main.cpp
lispp/test/: lisp_test.h  test_boolean.cpp  test_control_flow.cpp  test_eval.cpp  test_integer.cpp  test_lambda.cpp  test_list.cpp  test_symbol.cpp
src/: any.h  builtins.cpp  lisp.cpp  lisp.h
test/: main.cpp
